#ifndef MESSAGE_H_
#define MESSAGE_H_

#include <string>

class Message{
public:
    virtual std::string Get_MESSAGE() = 0;
};

#endif
